--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.cloud.config.profile=dev
 spring.application.name=debit_card-microservice
 server.port=8085
 spring.cloud.compatibility-verifier.enabled=false
-#eureka.client.service-url.defaultZone=http://10.0.247.18:8761/eureka/
+eureka.client.service-url.defaultZone=http://10.0.247.18:8761/eureka/
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 eureka.instance.preferIpAddress=true
