--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,2 +1,2 @@
-#spring.cloud.config.uri=http://10.0.14.206:8888
-spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.uri=http://10.0.14.206:8888
+#spring.cloud.config.uri=http://localhost:8888
