--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -42,5 +42,5 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/debit-card-service:latest .
-          docker push ${{ secrets.ACR_LOGIN_SERVER }}/debit-card-service:latest
+          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/debit-card-microservice:latest .
+          docker push ${{ secrets.ACR_LOGIN_SERVER }}/debit-card-microservice:latest
