--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,13 @@ spring.cloud.compatibility-verifier.enabled=false
 eureka.client.service-url.defaultZone=http://10.0.247.18:8761/eureka/
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 eureka.instance.preferIpAddress=true
+
+# Kafka
+spring.kafka.bootstrap-servers=10.0.17.254:9092
+spring.kafka.consumer.group-id=debit_card_service_group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
